feat: adding message (#79)